added to server and revised controllers and handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fund My Project!</title>
+    {{!--
     <link rel="stylesheet" href="/css/jass.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css"> --}}
 </head>
 
 <body>
@@ -14,8 +15,13 @@
         <header class="display-flex justify-space-between align-center p-2">
             <nav>
                 <a href="/">Home</a>
-                <a href="/post">Dashboard</a>
-                <!-- Conditionally render login or logout links -->
+
+                {{#if logged_in}}
+                <a href="/dashboard">Dashboard</a>
+                {{else}}
+                <a href="/login">Dashboard</a>
+                {{/if}}
+
                 {{#if logged_in}}
                 <button class="no-button" id="logout">Logout</button>
                 {{else}}
@@ -28,7 +34,7 @@
 
         </header>
         <main class="container container-fluid mt-5">
-            <!-- Render the sub layout -->
+
             {{{ body }}}
         </main>
         <footer>
@@ -36,10 +42,23 @@
         </footer>
     </div>
 
-    <!-- Render script for logged in users only -->
+    {{#if logged_in}}
+    <button class="no-button" id="logout">logout</button>
+    {{else}}
+    <a href="/login">Login</a>
+    {{/if}}
+    </nav>
+    <h1>
+        <a href="/">The Tech Blog</a>
+    </h1>
+    </header>
+    <main class="container container-fluid mt-5">
+        {{{ body }}}
+    </main>
+    <footer>
+    </footer>
+    </div>
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
 </body>
-
-</html>
