--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,25 @@
+{{#if logged_in}}
+
 {{#each posts as |post| }}
 <div class="row mb-4 project">
     <div class="col-md-5">
+
         <h2>
             <a href="/post/{{post.id}}">{{post.title}}</a>
         </h2>
-        <p>Created by {{post.user.name}} on {{post.date_created}}</p>
-    </div>
-</div>
-{{/each}}
+
+        <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
+
+        {{/each}}
+
+        {{else}}
+        {{#each posts as |post| }}
+
+        <div class="row mb-4 project">
+            <div class="col-md-5">
+                <h2>
+                    <a href="/post/{{post.id}}">{{post.title}}</a>
+                </h2>
+                <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
+                {{/each}}
+                {{/if}}
