--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,5 +1,14 @@
 <div class="text-center">
-    <h2>{{post.title}}</h2>
-    <p>Posted by {{post.user.name}} on {{format_date post.date_created}}</p>
-    <h4>{{post.content}}</h4>
+    <h2>{{title}}</h2>
+    <p>Posted by {{user.name}} on {{format_date date_created}}</p>
+    <h4>{{content}}</h4>
+
+
+    <div>
+        <h5>Comments:</h5>
+        {{#each comments}}
+        <p>{{this.content}}</p>
+        <h6>{{this.user.name}} commented on {{format_date this.date_created}}</h6>
+        {{/each}}
+    </div>
 </div>
