--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,8 @@
-{{#if logged_in}}
-
 {{#each posts as |post| }}
-<div class="col-md-5">
+<div>
     <h2>
         <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
 </div>
 {{/each}}
-
-{{else}}
-{{#each posts as |post| }}
-<div class="col-md-5">
-    <h2>
-        <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
-</div>
-{{/each}}
-{{/if}}
