done with handlebars. revised routes and models

--- a/views/myposts.handlebars
+++ b/views/myposts.handlebars
@@ -1,7 +1,10 @@
-<div data-id="{{this.id}}">
+<div class="headings" data-id="{{this.id}}">
     <h2>{{title}}</h2>
-    <p>Posted on {{format_date date_created}}</p>
-    <p>{{content}}</p>
+    <cite>Posted on {{format_date date_created}}</cite>
+</div>
+
+<div>
+    <h4>{{content}}</h4>
 </div>
 
 <div id="form" style="display: none">
