--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,6 @@
 {{#each posts as |post| }}
-<div>
-    <h2>
-        <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
-</div>
+<article class="headings">
+    <h2><a href="/post/{{post.id}}">{{post.title}}</a></h2>
+    <small>Posted by {{post.user.name}} on {{format_date post.date_created}}</small>
+</article>
 {{/each}}
