--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
-    {{!--
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"> --}}
-    {{!--
-    <link rel="stylesheet" href="/public/css/style.css"> --}}
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
 </head>
 
 <body class="container-fluid">
@@ -20,7 +18,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/dashboard">Dashboard</a></li>
-                    <li><a class="no-button" id="logout">Logout</a></li>
+                    <li><a class="logout" id="logout">Logout</a></li>
                 </ul>
             </nav>
             {{else}}
