--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,7 +1,11 @@
 <div data-id="{{this.id}}">
-    <div>
+
+    <hgroup>
         <h2>{{title}}</h2>
-        <p>Posted by {{user.name}} on {{format_date date_created}}</p>
+        <cite>Posted by {{user.name}} on {{format_date date_created}}</cite>
+    </hgroup>
+
+    <div>
         <h4>{{content}}</h4>
     </div>
 
@@ -9,33 +13,31 @@
     <div>
         <button id="add-comment">Add Comment</button>
     </div>
-
     {{else}}
     <div>
         <button onclick="window.location.href='/login'">Add Comment</button>
     </div>
     {{/if}}
 
-    <div>
-        <form style="display: none" id="comment-form">
-            <div>
-                <label for="comment-content">Comment:</label>
-                <textarea id="comment-content" name="comment-content"></textarea>
-            </div>
-            <div>
-                <button id="submitBtn">Submit</button>
-            </div>
-        </form>
-    </div>
+    <form style="display: none" id="comment-form">
+        <div class="grid">
+            <label for="comment-content">
+                Comment:
+                <input type="text" id="comment-content" name="comment-content"></input>
+            </label>
+            <button id="submitBtn">Submit</button>
+        </div>
+    </form>
 
-
-    <div>
+    <article>
         <h5>Comments:</h5>
         {{#each comments}}
-        <p>{{this.content}}</p>
-        <h6>{{this.user.name}} commented on {{format_date this.date_created}}</h6>
+        <blockquote>{{this.content}}
+            <footer>
+                <cite>{{user.name}} commented on {{format_date this.date_created}}:</cite>
+            </footer>
+        </blockquote>
         {{/each}}
-    </div>
 </div>
 
 <script src="/js/comment.js"></script>
